examples/datalog/12_errors/24_missing_period_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_missing_period_n12t24
Knowledge graph 'test_missing_period_n12t24' created.
Switched to knowledge graph: test_missing_period_n12t24
> .kg use test_missing_period_n12t24
Switched to knowledge graph: test_missing_period_n12t24
> +edge(1, 2) +edge(2, 3).
Script error: Parse error: Invalid arithmetic expression: '2)'
